# python-client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/apicheck/: __init__.py  client.py  exceptions.py  types.py
tests/: test_client.py
